[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/assets/input/scripts/SceneButton.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[node name="SceneButton" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -924.0
margin_bottom = -564.0
rect_min_size = Vector2( 100, 36 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 100.0
margin_bottom = 36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneName" type="Label" parent="."]
margin_top = 11.0
margin_right = 100.0
margin_bottom = 25.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_SceneButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SceneButton_mouse_exited"]
